public abstract class Notification {

    public abstract void notify_user();

}