' Generated by UML Generator
' Encoded: XLHDRzim3BtxLn0zsKqST1ydOmlQhOS5QBj3LlGm38PiiwbGMmeaEKNNzRzFacM7iHlq4ZWa7p_U8tMk3LEcRUf8FtAnPOerKDPCwmjZ52zQWwjIYZN_Yt0MFV0AeUIgh36AV1HSCiE-Is6Kh6jKy181f9VVjbAP3DOsWzZ0LpZvyF7JvnFdQZKgdS65KkpvYclpvTOQbZP4u1EnBkF4HLiZQfEtlCg02sF3pfmvjJypLbKE6xkC6RZF98ETv5Lmtc7nGyf7uf_34nOFrfQ1TMfkq0KGr0PDbpBKIpeSSUaucJGVlVPS_E8DZhceocp4qJ31ONWyZNGSp8Gq_9wNp70fhgJSndt3GzbhneKlDdknOXfUla9ZJJ5J6zsByFiFWTdHKDsp4k5dOIVOXLvdxRPY1bs1GieQcTZNS9Ds0mdMO9_LAnh8Sj-1tmE12TL7TVPqUEffzZaCGWG9RgpNjJTKdsdqwn7Rj3cHZUn17fgAtnT_LRdatIpkVrYXaUXqe3r1nDhnrAgQqkGvtx4wrmDRVcg2Ymba3YD0yhP0NQFvFhYVOA_Swjr5l5qTMxvIeItebI5KTTQxmEja7zVNw_o6R6tWOxZ3eUuuaDxoiFhFUKlBsogiq4QnqdJl54nh7GEEtYgPfbq_8_jYiQHoHgEpFhMm4P7-Ebmw2gCRiLZyMmx75bb9taWoeIrDBUZ0D8qvxMSuHr7PL_m_
' URL: http://www.plantuml.com/plantuml/uml/XLHDRzim3BtxLn0zsKqST1ydOmlQhOS5QBj3LlGm38PiiwbGMmeaEKNNzRzFacM7iHlq4ZWa7p_U8tMk3LEcRUf8FtAnPOerKDPCwmjZ52zQWwjIYZN_Yt0MFV0AeUIgh36AV1HSCiE-Is6Kh6jKy181f9VVjbAP3DOsWzZ0LpZvyF7JvnFdQZKgdS65KkpvYclpvTOQbZP4u1EnBkF4HLiZQfEtlCg02sF3pfmvjJypLbKE6xkC6RZF98ETv5Lmtc7nGyf7uf_34nOFrfQ1TMfkq0KGr0PDbpBKIpeSSUaucJGVlVPS_E8DZhceocp4qJ31ONWyZNGSp8Gq_9wNp70fhgJSndt3GzbhneKlDdknOXfUla9ZJJ5J6zsByFiFWTdHKDsp4k5dOIVOXLvdxRPY1bs1GieQcTZNS9Ds0mdMO9_LAnh8Sj-1tmE12TL7TVPqUEffzZaCGWG9RgpNjJTKdsdqwn7Rj3cHZUn17fgAtnT_LRdatIpkVrYXaUXqe3r1nDhnrAgQqkGvtx4wrmDRVcg2Ymba3YD0yhP0NQFvFhYVOA_Swjr5l5qTMxvIeItebI5KTTQxmEja7zVNw_o6R6tWOxZ3eUuuaDxoiFhFUKlBsogiq4QnqdJl54nh7GEEtYgPfbq_8_jYiQHoHgEpFhMm4P7-Ebmw2gCRiLZyMmx75bb9taWoeIrDBUZ0D8qvxMSuHr7PL_m_
' Generated on: 2026-05-23T13:28:02.145828400

@startuml
skinparam classAttributeIconSize 0
hide circle

class DataController {
  -DBport: String = "1234"
  -users: ArrayList<User> = new ArrayList<>()
  -newest_uid: int = 0
  --
  +addUser(user: User): void
  +addWebHook(user: User, webhook: WebsiteHook): void
  +getUser(uid: int): User
  +getUsers(): ArrayList<User>
}

class TimeController {
  -dc: DataController
  --
  +TimeController(dc: DataController)
  +notificationLoop(): void
}

class Main {
  +{static} main(args: String[]): void
}

interface Observer {
  +update(): boolean
}

class User {
  -name: String
  -uid: int
  -webhooks: ArrayList<WebsiteHook> = new ArrayList<>()
  --
  +User(name: String, uid: int)
  +getName(): String
  +set_uid(new_uid: int): void
  +add_webhook(webhook: WebsiteHook): void
  +getId(): int
  +getWebHooks(): ArrayList<WebsiteHook>
}

class WebsiteHook {
  -url: String
  -interval_s: int
  --
  +WebsiteHook(url: String, interval_s: int)
  +update(): boolean
  +get_interval_s(): int
}

class UI {
  -dc: DataController
  --
  +UI(dc: DataController)
  +createUser(): void
  +createWebhook(): void
}

class SMS_Notification {
  -user: User
  --
  +SMS_Notification(user: User)
  +notify_user(): void
}

abstract class _Notification {
  +notify_user(): void
}

DataController o-- User
DataController ..> WebsiteHook
TimeController *-- DataController
User o-- WebsiteHook
WebsiteHook ..|> Observer
UI *-- DataController
SMS_Notification --|> _Notification
SMS_Notification *-- User
@enduml